# docs/openapi.yaml
@@ -18,10 +18,6 @@ components:
             type: object
         dto.FlightSearchResponse:
             properties:
-                cheapest_flight:
-                    $ref: '#/components/schemas/entity.Flight'
-                fastest_flight:
-                    $ref: '#/components/schemas/entity.Flight'
                 flights:
                     items:
                         $ref: '#/components/schemas/entity.Flight'
@@ -30,6 +26,18 @@ components:
         dto.HealthResponse:
             properties:
                 status:
+                    type: string
+            type: object
+        dto.LoginRequest:
+            properties:
+                password:
+                    type: string
+                username:
+                    type: string
+            type: object
+        dto.LoginResponse:
+            properties:
+                access_token:
                     type: string
             type: object
         entity.Flight:
@@ -42,6 +50,14 @@ components:
                     type: string
                 duration:
                     type: integer
+                flight_number:
+                    type: string
+                id:
+                    type: string
+                is_cheapest:
+                    type: boolean
+                is_fastest:
+                    type: boolean
                 origin:
                     type: string
                 price:
@@ -84,6 +100,51 @@ paths:
             summary: Health check
             tags:
                 - Health
+    /v1/auth/login:
+        post:
+            description: Search for flights based on origin, destination, and date
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/dto.LoginRequest'
+                description: Request body
+                required: true
+                x-originalParamName: request
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/dto.LoginResponse'
+                    description: OK
+                "400":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/dto.ErrorResponse'
+                    description: Bad Request
+                "401":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/dto.ErrorResponse'
+                    description: Unauthorized
+                "404":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/dto.ErrorResponse'
+                    description: Not Found
+                "500":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/dto.ErrorResponse'
+                    description: Internal Server Error
+            summary: Auth search
+            tags:
+                - Auth
     /v1/flights/search:
         get:
             description: Search for flights based on origin, destination, and date
@@ -137,6 +198,8 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/dto.ErrorResponse'
                     description: Internal Server Error
+            security:
+                - BearerAuth: []
             summary: Flight search
             tags:
                 - Flight
