# internal/domain/entity/flight.go
@@ -3,10 +3,14 @@ package entity
 import "time"
 
 type Flight struct {
-	Origin      string    `json:"origin"`
-	Destination string    `json:"destination"`
-	DepartureAt time.Time `json:"departure_at"`
-	ArrivalAt   time.Time `json:"arrival_at"`
-	Duration    int64     `json:"duration"`
-	Price       int64     `json:"price"`
+	ID           string    `json:"id"`
+	FlightNumber string    `json:"flight_number"`
+	Origin       string    `json:"origin"`
+	Destination  string    `json:"destination"`
+	DepartureAt  time.Time `json:"departure_at"`
+	ArrivalAt    time.Time `json:"arrival_at"`
+	Duration     int64     `json:"duration"`
+	Price        int64     `json:"price"`
+	IsCheapest   bool      `json:"is_cheapest"`
+	IsFastest    bool      `json:"is_fastest"`
 }
